[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spaceship/AutomaticTurret.gd" type="Script" id=1]
[ext_resource path="res://Spaceship/Automatic Turret Base.pxo" type="Texture" id=2]
[ext_resource path="res://Spaceship/Automatic Turret Canon.pxo" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 53.1485

[node name="AutomaticTurret" type="Sprite"]
use_parent_material = true
position = Vector2( 0, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CanonSprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )
offset = Vector2( 0, -0.5 )

[node name="Position2D" type="Position2D" parent="CanonSprite"]
position = Vector2( 0, -1.5 )

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
